@@ -793,7 +793,7 @@ show_params(FILE * fp)
 #ifdef USE_M17N
 	if (!OptionEncode)
 	    cmt =
-		wc_conv(gettext(sections[j].name), OptionCharset,
+		wc_conv(_(sections[j].name), OptionCharset,
 			InnerCharset)->ptr;
 	else
 #endif
@@ -839,7 +839,7 @@ show_params(FILE * fp)
 	    }
 #ifdef USE_M17N
 	    if (!OptionEncode)
-		cmt = wc_conv(gettext(sections[j].params[i].comment),
+		cmt = wc_conv(_(sections[j].params[i].comment),
 			      OptionCharset, InnerCharset)->ptr;
 	    else
 #endif
