@@ -1,3 +1,10 @@
+2004-08-03  WATANABE Katsuyuki <knabe@sannet.ne.jp>
+
+	* [w3m-dev 04095] build fix when configure with --enable-messagel10n
+	* main.c (main): locale and textdomain initialization if ENABLE_NLS
+	* menu.c (initMenu): use _() instead of gettext()
+	* rc.c (show_params): use _() instead of gettext()
+
 2004-07-18  WATANABE Katsuyuki <knabe@sannet.ne.jp>
 
 	* [w3m-dev 04094] Re: option panel: gettextize select list
